fix styling on course detail ratings card/tabs on mobile

--- a/src/app/courses/course-detail/course-detail.component.scss
+++ b/src/app/courses/course-detail/course-detail.component.scss
@@ -6,39 +6,15 @@
 h1 {
     font-size: 2rem;
 }
-// h2 {
-//     @media (min-width: 500px) {
-//         font-size: 5rem;
-//     }
-//     @media (max-width: 500px) {
-//         font-size: 3.5rem;
-//     }
-//     line-height: 5rem;
-//     font-weight: 900;
-//     text-shadow: 1px 1px 1px rgba(51, 63, 72, 0.4);
-//     text-transform: uppercase;
-//     color: #ffffff;
-//     margin-top: 0.75em;
-// }
-
-// h3 {
-//     font-size: 2.5rem;
-//     line-height: 2.75rem;
-//     font-weight: 700;
-//     margin-top: 1em;
-//     margin-bottom: 0px;
-//     padding-bottom: 10px;
-//     letter-spacing: -0.025rem;
-// }
 
 .review-spacer {
     padding: 20px;
 }
 
-.review-footer {
-    display: flex;
-    justify-content: flex-end;
-}
+// .review-footer {
+//     display: flex;
+//     justify-content: flex-end;
+// }
 
 .mat-card {
     margin: 10px 0px;
@@ -64,12 +40,8 @@ h1 {
 //     margin: 0 -15px;
 // }
 .rating-grid {
-    // margin-bottom: 16px;
-    // overflow: hidden;
-    // border-radius: 4px;
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px;
-    height: 5rem;
     color: rgba(0, 0, 0, 0.87);
     background: white;
 }
@@ -90,6 +62,14 @@ h1 {
     border-right: 1px solid #efefef;
     &:last-child {
         border-right: none;
+    }
+    @media screen and (max-width: 599px) {
+        width: 100%;
+        border-right: none;
+        border-bottom: 1px solid #efefef;
+        &:last-child {
+            border-bottom: none;
+        }
     }
 }
 
