--- a/src/styles/layouts/_typography.scss
+++ b/src/styles/layouts/_typography.scss
@@ -1,6 +1,6 @@
 @import "~@angular/material/theming";
 $typography-configuration: mat-typography-config(
-    $body-1: mat-typography-level(16px, 'normal'),
+    $body-1: mat-typography-level(16px, 1.5),
     $font-family: '-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"'
 );
 @include mat-core($typography-configuration);
@@ -10,9 +10,9 @@ $typography-configuration: mat-typography-config(
 // }
 
 body {
-    font-family: $main-font;
+    // font-family: $main-font;
     color: $darkgray;
-    font-size: 16px;
+    // font-size: 16px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
